--- a/Tindog/style.css
+++ b/Tindog/style.css
@@ -33,77 +33,72 @@ ul {
     justify-content: center;
     align-items: center;
     position: relative;
+    
 }
 .profiles img,.next-profiles img {
-    width: 97vw;
+    width: 90vw;
     border-radius: 3%;
     height: 600px;
     max-width: 500px; 
 }
-.div-1 {
-    position: relative;
-    margin-top: 0%;
+/*.div-1 {
+    position: absolute;
+    top: 10%;
     z-index: 0;
-  
-  }
+}
 .div-2 {
-  position: relative;
-  margin-top: -105%;
+  position: absolute;
+  top:15%;
   z-index: -1;
-
 }
 .div-3 {
-    position: relative;
-    margin-top: -105%;
+    position: absolute;
+    top: 16%;
     z-index: -2;
-  
-  }
+}
 .div-4 {
-    position: relative;
-    margin-top: -105%;
+    position: absolute;
+    top: 17%;
     z-index: -3;
 }
 .div-5 {
-    position: relative;
-    margin-top: -105%;
+    position: absolute;
+    top: 18%;
     z-index: -4;
 }
 .div-6 {
-    position: relative;
-    margin-top: -105%;
+    position: absolute;
+    top: 15%;
     z-index: -5;
 }
 .div-7 {
-    position: relative;
-    margin-top: -105%;
+    position: absolute;
+    top: 15%;
     z-index: -6;
 }
 .div-8 {
-    position: relative;
-    margin-top: -105%;
+    position: absolute;
+    top: 15%;
     z-index: -7;
-}
-.div-9 {
-    position: relative;
-    margin-top: -105%;
-    z-index: -7;
-}
+}*/
 
-.user {
-    position: relative;
-    bottom:200px;
-    width: 90%;
-    color:white
-}
 .next-profiles {
     display: block;
-  
+    left:50%;
     
+    z-index: -10;
+    position: absolute;
+    justify-content: center;
+    position: absolute;
+ 
+    top: 100%;
+    left:45%;
+    transform: translate(-50%,0%);
+   
 }
 .next-profiles img {
     display: block;
 }
-
 .user-information-container {
     position: absolute;
     bottom:2.5em;
@@ -113,7 +108,6 @@ ul {
     max-width: 400px;
     height: 23%;
     padding-bottom:1em
-
 }
 .user-information-container,#user-location {
     text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.938);
@@ -131,20 +125,30 @@ ul {
     margin-bottom: 0;
     display: flex;
     align-items: center;
-    gap: 1.5em;
+    gap: 1.5em; 
     display: none;
+    position: absolute;
+    z-index: 100;
+    top:100%;
+    left:50%;
+    transform: translate(-50%,-70%);
 }
-.profiles {
-    margin-top: -170%;
-    z-index: 10;
-    position: relative;
+.profiles {  
     justify-content: center;
+    position: absolute;
+    z-index: 100;
+    top: 100%;
+    left:50%;
+    transform: translate(-50%,0%);
+    
+    
 }
 .btns-container button {
     border-radius: 50%;
     padding: 1.2em;
     background-color: white;
     border: none;
+    
     box-shadow: 0px 1px 20px rgba(0, 0, 0, 0.116);
 }
 .btns-container img {
@@ -177,7 +181,7 @@ ul {
     height: 15px;
 }
 .badge-span{
-    z-index: 1;
+    z-index: 100;
     position: absolute;
     left: 5%;
     top:4%;
