--- a/Travel Journal/travel journal/src/App.css
+++ b/Travel Journal/travel journal/src/App.css
@@ -67,15 +67,17 @@ nav li {
 .note-img {
   width: 100%;
   height: 100%;
+ 
 
 }
+
 article{
   margin-bottom: 1.5em;
 }
 .note-header header{
  display: flex;
  gap: 1em;
- margin-top: 1em;
+ margin-bottom: 1em;
 }
 .note-location {
   font-weight: 300;
@@ -87,11 +89,11 @@ a {
   text-decoration: underline;
   
 }
-.note-container h1 {
+.note h1 {
   margin-bottom: .5em;
   font-size: 1.5rem;
 }
-.note-header,.note-container{
+.note-container{
   padding: .5em 1em;
 }
 .note-date {
@@ -100,4 +102,51 @@ a {
   margin-bottom: .7em;
 
 
+}
+@media (min-width:600px) {
+  .note-img {
+    border-radius: 1em;
+    width: 100%;
+    height: 100%;
+    max-width: 300px;
+    min-width: 300px;
+    
+    
+  }
+  article {
+    display: flex;
+    padding: 1em;
+    
+  }
+  
+  .note-container {
+    flex-direction: column;
+  }
+}
+@media (min-width:1000px) {
+  body {
+    font-size: 1.3rem;
+    background-color: #f8f8f8;
+  }
+  article {
+    width: 50%;
+    margin: 0 auto;
+    padding: 2.5em;
+    background-color: rgb(255, 255, 255);
+
+  }
+ 
+  .note-img {
+    height: 400px;
+  }
+  .note h1 {
+    margin-bottom: 1em;
+  }
+  .note p {
+    max-width: 400px;
+  }
+  .note-date {
+    margin: 1.2em 0;
+  }
+  
 }
