--- a/Travel Journal/travel journal/src/App.css
+++ b/Travel Journal/travel journal/src/App.css
@@ -48,10 +48,14 @@
 }
 body {
   font-family: 'Inter', sans-serif;
-  color:#2B283A
+  color:#2B283A;
+
 
   
 
+}
+p {
+  font-weight: 300;
 }
 .app-header {
 color:white;
@@ -66,18 +70,19 @@ nav li {
 }
 .note-img {
   width: 100%;
-  height: 100%;
- 
+  height: 300px;
 
 }
 
 article{
   margin-bottom: 1.5em;
+ 
 }
 .note-header header{
  display: flex;
  gap: 1em;
  margin-bottom: 1em;
+ margin-top: 1em;
 }
 .note-location {
   font-weight: 300;
@@ -91,53 +96,91 @@ a {
 }
 .note h1 {
   margin-bottom: .5em;
-  font-size: 1.5rem;
+  font-size: 1.6rem;
+  font-weight: 900;
 }
 .note-container{
   padding: .5em 1em;
 }
 .note-date {
-
   font-weight: 600;
   margin-bottom: .7em;
 
-
 }
-@media (min-width:600px) {
-  .note-img {
+.google-maps-link {
+  font-size: 0.9rem;
+}
+.locationIcon {
+  width: 15px;
+  margin-right: 5px;
+}
+
+@media (min-width:675px) {
+  body {
+    font-size: 1.1rem;
+    background-color: rgba(252, 251, 251, 0.945);
+  }
+    .note-img {
     border-radius: 1em;
-    width: 100%;
-    height: 100%;
-    max-width: 300px;
-    min-width: 300px;
-    
+    width: 250px;
+    height: 260px;
     
   }
+  .app-header {
+    margin-bottom: 2em;
+  }
   article {
+    margin: 0 auto;
+    width: 95%;
     display: flex;
-    padding: 1em;
+ 
+    justify-content: center;
+    padding: 2em 1em;
+    gap: 1em;
+    background-color: rgb(255, 255, 255);
+    box-shadow: 0px 15px  5px rgba(0, 0, 0, 0.055);
     
+  }
+  .note p {
+    max-width: 400px;
   }
   
   .note-container {
     flex-direction: column;
+    margin-top: -1.2em;
+    
+  }
+  .note-date {
+    margin: 1.2em 0;
   }
 }
-@media (min-width:1000px) {
+@media (min-width:800px) {
   body {
-    font-size: 1.3rem;
-    background-color: #f8f8f8;
+    font-size: 1.2rem;
+  }
+  article {
+    width: 80%;
+    max-width: 900px;
+  }
+}
+@media (min-width:1600px) {
+  body {
+    font-size: 1.4rem;
+    
   }
   article {
     width: 50%;
     margin: 0 auto;
     padding: 2.5em;
-    background-color: rgb(255, 255, 255);
-
+    gap:2em;
   }
- 
+  .note p {
+    max-width: 400px;
+  }
+
   .note-img {
     height: 400px;
+    width: 300px;
   }
   .note h1 {
     margin-bottom: 1em;
@@ -148,5 +191,4 @@ a {
   .note-date {
     margin: 1.2em 0;
   }
-  
 }
