--- a/Oldagram/my-app/src/index.css
+++ b/Oldagram/my-app/src/index.css
@@ -14,7 +14,6 @@ header {
   height: 120px;
   width: 100%;
   box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.021);
-  
   flex-direction: column;
   justify-content: center;
   border-bottom: 2px solid rgba(44, 44, 44, 0.034);
@@ -90,6 +89,7 @@ textarea {
 }
 .ul-post li {
   width: 75vw;
+ 
 }
 .comments-list li {
   display: grid;
@@ -103,7 +103,6 @@ textarea {
 .main-comment {
   width: 85%;
 }
-
 .span {
   grid-row: span 2 ;
 }
@@ -116,7 +115,6 @@ textarea {
 }
 .post-img {
   width:100%;
- 
 }
 footer {
   padding: 0em 1em;
@@ -127,7 +125,6 @@ footer {
 .btns-container img {
   width: 25px;
 }
-
 .likesNumberSpan,.comment-main-username {
   font-weight: bolder;
 }
@@ -149,8 +146,18 @@ article {
 }
 main {
   overflow-x: hidden;
+ width: 100%;
+ background-color: aqua;
+
+ display: flex;
+ justify-content: center;
+ margin: 0 auto;
+  
 }
 
+li:active,li:visited:li:link {
+  text-decoration: inherit;
+}
 @media (min-width:510px) {
   .post-img {
     min-width: 250px;
@@ -169,7 +176,7 @@ main {
     margin-bottom: 1.5em;
   }
   .main-section {
-    width:100%;
+    width:50%;
     padding: 0;
     display: block;
     display: flex;
