--- a/Password Generator/index.css
+++ b/Password Generator/index.css
@@ -21,6 +21,14 @@ h1,h2,.setUp-container,.generateBtn {
 .setUp-container > * {
     display: block;
 }
+.container,.password-container,.passwords{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    max-width: 500px;
+    margin: 0 auto;
+}
 
 input {
     width: 180px;
@@ -83,6 +91,7 @@ span {
     border-top: #2F3E53 1px solid ;
     display: inline-block;
     vertical-align: middle;
+    margin: 0 auto;
 }
 .password {
     color:#4ae282;
@@ -198,6 +207,7 @@ span {
         width: 270px;
         
     }
+    
 }
 
 @media (min-width:550px) and (max-width:930px) {
