--- a/Oldagram/my-app/src/index.css
+++ b/Oldagram/my-app/src/index.css
@@ -146,12 +146,12 @@ article {
 }
 main {
   overflow-x: hidden;
- width: 100%;
- background-color: aqua;
-
- display: flex;
- justify-content: center;
- margin: 0 auto;
+  width: 100%;
+  background-color: aqua;
+  display: flex;
+  justify-content: center;
+  margin: 0 auto;
+  
   
 }
 
@@ -177,6 +177,7 @@ li:active,li:visited:li:link {
   }
   .main-section {
     width:50%;
+    max-width: 700px;
     padding: 0;
     display: block;
     display: flex;
@@ -203,5 +204,5 @@ li:active,li:visited:li:link {
   .btns-container li {
     margin-right: 1.3em;
   }
-  
+
 }
