--- a/Oldagram/my-app/src/profile.css
+++ b/Oldagram/my-app/src/profile.css
@@ -1,5 +1,5 @@
 .profile-img {
-    width: 20%;
+    width: 90px;
     border-radius: 50%;
 }
 .profile-info{
@@ -7,15 +7,50 @@
    
 }
 .header-profile-container {
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(2,auto);
     align-items: center;
-    justify-content: space-around;
+    background-color: beige;
+    padding: 1.5em;
+    gap:1em
+    
 }
+
 .header-profile-container  div {
     gap:2em;
-    font-size: 1.2rem;
+    font-size: 1em;
     text-align: center;
 }
 .info-numbers {
     font-weight: 400;
+    font-size: 2em;
+   
+}
+.profile-posts-img {
+    width: 100%;
+    width: 125px;
+    max-width: 200px;
+    height:200px;
+}
+.posts-section {
+    display: grid;
+    gap:.1em;
+    grid-template-columns: repeat(3,auto);
+}
+.header-profile h3{
+    margin-bottom: 1em;
+    padding: 0 1em;
+}
+.header-profile-container p {
+    width: 100%;
+    background-color: aqua;
+    grid-column: span 2;
+}
+
+button {
+    background-color: aqua;
+    padding: .1em;
+    border-radius: .5em;
+    width: 10px;
+    display: inline;
 }
