--- a/Oldagram/my-app/src/index.css
+++ b/Oldagram/my-app/src/index.css
@@ -3,6 +3,7 @@
   padding:0;
   margin:0;
   box-sizing: border-box;
+  font-family: 'Arima', cursive;
   
   
 }
@@ -147,7 +148,6 @@ article {
 main {
   overflow-x: hidden;
   width: 100%;
-  background-color: aqua;
   display: flex;
   justify-content: center;
   margin: 0 auto;
