--- a/Oldagram/my-app/src/profile.css
+++ b/Oldagram/my-app/src/profile.css
@@ -1,3 +1,13 @@
+
+
+.header-profile {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+}
+
+
 .profile-img {
     width: 90px;
     border-radius: 50%;
@@ -10,7 +20,6 @@
     display: grid;
     grid-template-columns: repeat(2,auto);
     align-items: center;
-    background-color: beige;
     padding: 1.5em;
     gap:1em
     
@@ -22,14 +31,13 @@
     text-align: center;
 }
 .info-numbers {
-    font-weight: 400;
+    font-weight: 700;
     font-size: 2em;
    
 }
 .profile-posts-img {
     width: 100%;
     width: 125px;
-    max-width: 200px;
     height:200px;
 }
 .posts-section {
@@ -40,17 +48,42 @@
 .header-profile h3{
     margin-bottom: 1em;
     padding: 0 1em;
+    align-self: self-start;
 }
 .header-profile-container p {
     width: 100%;
-    background-color: aqua;
     grid-column: span 2;
 }
 
-button {
-    background-color: aqua;
-    padding: .1em;
+.followBtn {
+    background-color: rgb(63, 172, 0);
+    padding: 1em;
     border-radius: .5em;
-    width: 10px;
-    display: inline;
+    width: 90%;
+    margin-bottom: 1em;
+    color:white;
+    max-width: 400px;
+    align-self: center;
+    
+
+}
+
+@media (min-width:800px) {
+    body {
+        font-size: 1.2em;
+    }
+    .header-profile {
+        width: 540px;
+        
+    }
+    .profile-posts-img {
+        width: 180px;
+        
+    }
+    .profile-img {
+        width: 130px;
+    }
+    .header-profile-container {
+        gap:2em;
+    }
 }
