--- a/Oldagram/my-app/src/profile.css
+++ b/Oldagram/my-app/src/profile.css
@@ -7,11 +7,7 @@
     align-items: stretch;
 }
 
-header h4,.followBtn {
-    margin-top: -.5em;
-  
-    
-  }
+
 header h4 {
     width: 100%;
 }
@@ -28,7 +24,8 @@ header h4 {
     grid-template-columns: repeat(2,auto);
     align-items: center;
     padding: .5em 1em;
-    gap:1em;
+
+    grid-template-rows:100px 20px 
 
 }
 
@@ -43,33 +40,53 @@ header h4 {
    
 }
 .profile-posts-img {
-    
     width: 140px;
     height:200px;
 }
-/*.posts:before {
-    content: "posts";
-    width: 100vw;
-    height: 2px;
-    text-align: center;
-    background-color: rgb(235, 235, 235);
-    margin-bottom: 1em;
-}*/
+.posts-section {
+    position: relative;
+}
+.posts-section:before {
+    content: "";
+    width: 100%;
+    height: 1px;
+   
+    background-color: rgb(214, 214, 214);
+    margin-top: -.5em;
+    position: absolute;
+}
 .posts {
     display: grid;
     gap:.1em;
+    margin-top: .5em;
     grid-template-columns: repeat(3,auto);
+    
 }
 .header-profile h3{
     margin-bottom: 1em;
     padding: 0 1em;
-    align-self: self-start;
+    
+   
+    
     
 }
-.header-profile-container p  {
+.title {
+    color:rgb(168,168,168);
+    font-weight: 300;
+    grid-column: span 2;
+   
+    font-size: .9rem;
+  
+}
+.header-profile-container p,.title  {
     width: 100%;
     grid-column: span 2;
-    margin-bottom: .5em;
+    
+    
+ 
+}
+.header-profile-container p {
+    margin: .2em 0;
 }
 
 .followBtn {
@@ -79,9 +96,14 @@ header h4 {
     width: 60%;
     margin-bottom: 1em;
     color:white;
-    max-width: 400px;
     justify-self: center;
     
+}
+.posts-section span {
+    font-weight: 300;
+    text-align: center;
+    display: flex;
+    justify-content: center;
 }
 
 @media (min-width:800px) {
@@ -100,8 +122,9 @@ header h4 {
         width: 130px;
     }
     .header-profile-container {
-        gap:2em;
+        
         padding: 1em;
+       gap:1.5em;
     }
     .header-profile h3{
         padding: 0; 
