--- a/Travel Journal/travel-journal/src/App.css
+++ b/Travel Journal/travel-journal/src/App.css
@@ -1,45 +1,4 @@
-/*#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}*/
 
 * {
   padding: 0;
@@ -77,6 +36,9 @@ nav li {
 article{
   margin-bottom: 1.5em;
  
+}
+header img {
+  width: 20px;
 }
 .note-header header{
  display: flex;
@@ -144,7 +106,9 @@ a {
   .note p {
     max-width: 400px;
   }
-  
+  header img {
+    width: 30px;
+  }
   .note-container {
     flex-direction: column;
     margin-top: -1.2em;
