--- a/Color Scheme Generator/index.css
+++ b/Color Scheme Generator/index.css
@@ -18,7 +18,6 @@ body {
     height: 10%;
     box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.336);
   
-    
 }
 form {
     gap:0.7em;
@@ -65,7 +64,7 @@ select,.random-btn {
    width: 100vw;
    display: flex;
    display: block;
-
+   box-shadow: 0 0 200px 2px rgba(3, 3, 3, 0.123);
    justify-content: center;
    align-items: center;
    font-family: 'Ubuntu Condensed', sans-serif;
@@ -86,8 +85,6 @@ span {
 .color-name {
     width: 100%;
     height: auto;
-    
-    
     font-family: 'Cookie', cursive;
     overflow-y: hidden;
 }
@@ -116,10 +113,26 @@ span {
     display: flex;
     align-items: center;
     justify-content: center;
-    animation: var(--pseudo-animation)
-    
+    animation: var(--pseudo-animation) 
     
  }
+
+.skeleton {
+    background: #eee;
+    background: linear-gradient(110deg, #ececec 8%, #d4d4d400 18%, #ecececaf 33%);
+    animation: loading 2s infinite ;
+    background-size: 200% 100%;
+  }
+  
+  .hide {
+    display: none;
+  }
+  @keyframes loading {
+    to {
+        background-position-x: -200%;
+      }
+  }
+
  @keyframes fade {
     100% {
         opacity: 0;
@@ -163,6 +176,8 @@ span {
         margin-right: -4px;
         margin-bottom: -10px;
         padding: 1em;
+        
+      
     }
     .color span {
         position: relative;
